# passkit.rs

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
examples/: create_pass.rs
src/: field.rs  lib.rs  pass.rs  personalization.rs  signature.rs  util.rs
tests/signpass/: .gitignore  LICENSE
tests/signpass/signpass/: PassSigner.h  PassSigner.m  main.m
tests/signpass/signpass.xcodeproj/project.xcworkspace/xcuserdata/eugeniotampieri.xcuserdatad/: UserInterfaceState.xcuserstate
