[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = ["command-line-interface", "cryptography", "development-tools", "encoding", "os::macos-apis"]
description = "Apple PassKit library to manage passes"
documentation = "https://docs.rs/crate/passkit"
license = "MIT"
name = "passkit"
readme = "README.md"
repository = "https://github.com/sergeysova/passkit.rs"
version = "0.0.7"
edition = "2021"

[dependencies]
fs_extra = "1.2"
keychain-services = "0.1"
openssl = "0.10"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"
zip = "0.6"

[badges]
codecov = { repository = "sergeysova/passkit.rs" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "sergeysova/passkit.rs", branch = "master" }
