[package]
authors = ["Sergey Sova <mail@sergeysova.com>"]
categories = ["command-line-interface", "cryptography", "development-tools", "encoding", "os::macos-apis"]
description = "Apple PassKit library to manage passes"
documentation = "https://docs.rs/crate/passkit"
license = "MIT"
name = "passkit"
readme = "README.md"
repository = "https://github.com/sergeysova/passkit.rs"
version = "0.0.7"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
sha1 = "0.10"
hex = "0.4"
openssl = "0.10"